--- a/test-output/old/Facebook Login/methods.html
+++ b/test-output/old/Facebook Login/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Facebook Login</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dafa95">  <td>20/01/09 01:51:00</td>   <td>0</td> <td title="&gt;&gt;LoginFacebookSteps.setUp()[pri:0, instance:com.facebook.automation.main.LoginFacebookSteps@71bbf57e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1039949752</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>20/01/09 01:51:05</td>   <td>5174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFacebookSteps.login()[pri:0, instance:com.facebook.automation.main.LoginFacebookSteps@71bbf57e]">login</td> 
-  <td>main@1039949752</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>20/01/09 01:51:19</td>   <td>19371</td> <td title="&lt;&lt;LoginFacebookSteps.tearDown()[pri:0, instance:com.facebook.automation.main.LoginFacebookSteps@71bbf57e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1039949752</td>   <td></td> </tr>
+<tr bgcolor="686d7f">  <td>20/01/10 02:11:23</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.facebook.automation.TestExecutor.TestBase@184f6be2]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="686d7f">  <td>20/01/10 02:11:23</td>   <td>33</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.facebook.automation.TestExecutor.TestBase@184f6be2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
